--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -497,7 +497,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -513,7 +513,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -541,7 +541,7 @@ a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"]
+a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -606,7 +606,7 @@ a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fsw
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /* Misfits n */
-a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"]
+a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"]
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /*
@@ -638,7 +638,7 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/prince
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"], a[href|="/sweepsweepsweep"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -654,11 +654,11 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/whatismylife"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"], a[href|="/kittenbloom"], a[href|="/disreally"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"], a[href|="/kittenbloom"], a[href|="/disreally"], a[href|="/fsfu"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -678,15 +678,15 @@ a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[hr
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"], a[href|="/sillybeecuddle"]
+a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"], a[href|="/sillybeecuddle"], a[href|="/rdspeechless"]
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
-a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"], a[href|="/trilbybelle"], a[href|="/fedorabelle"]
+a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"], a[href|="/trilbybelle"], a[href|="/fedorabelle"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"], a[href|="/rarityspeechless"]
+a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"], a[href|="/rarityspeechless"], a[href|="/ssawe"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
@@ -1356,3 +1356,8 @@ a[href|="/starlightyouknow"] {width:61px;height:100px;background-position: -179p
 a[href|="/medicshy"] {width:135px;height:150px;background-position: -240px -150px;}
 a[href|="/firinmaheeyup"] {width:118px;height:150px;background-position: -375px -150px;}
 a[href|="/celestiawb"] {width:250px;height:155px;background-position: -493px -150px;}
+a[href|="/rdthathurt"] {width:150px;height:121px;background-position: -90px -250px;}
+a[href|="/sslove"] {width:150px;height:124px;background-position: -240px -300px;}
+a[href|="/squareroot"] {width:150px;height:88px;background-position: -390px -300px;}
+a[href|="/flirttwi"], a[href|="/flirtwi"] {width:62px;height:100px;background-position: 0 -300px;}
+a[href|="/ajrdhoofbump"] {width:126px;height:100px;background-position: -540px -305px;
