--- a/source-css/sunburst.css
+++ b/source-css/sunburst.css
@@ -4,6 +4,17 @@
 
 
 
+/***********************
+*
+*         Header
+*   
+************************/
+
+
+#header-img
+{ 
+ margin:0px 20px -3px 0px;
+}
 
 
 /***********************
