--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -34,8 +34,8 @@
 
 
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Drunk On Eggnog"}
-div.titlebox .users-online span.number:after {content:" Grumpy Alchemists"}
+div.titlebox .subscribers span.number:after {content:" Finding A Job"}
+div.titlebox .users-online span.number:after {content:" Made Spike Do It"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -183,7 +183,7 @@ border-top-right-radius: 5px;
  margin-top:-45px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-40px;
+ margin-right:-45px;
  background-position:-0% -0%; /*To select emote table position. Increments of -100%.*/
  transform:scaleX(1); /*To reverse the hat. '1' is normal, '-1' is reversed.*/
 }
@@ -197,14 +197,17 @@ border-top-right-radius: 5px;
 .linkflair-fecontent > .thumbnail.nsfw, .linkflair-ep8 > .thumbnail.nsfw, .linkflair-fespoiler > .thumbnail.nsfw, .linkflair-rafcontent > .thumbnail.nsfw, .linkflair-2017movie > .thumbnail.nsfw { background-position:0px -380px!important}
 .linkflair-comicspoiler > .thumbnail.nsfw, .linkflair-comictitlespoiler > .thumbnail.nsfw { background-position:0px -450px!important}
 
-a.author.id-t2_4mwnz,a.author.id-t2_8kzeb,div.content a.author.id-t2_5agom,a.author.id-t2_5o2lh,a.author.id-t2_4uott,a.author.id-t2_dq6ce,a.author.id-t2_5qkuh,a.author.id-t2_wptze{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
-a.author.id-t2_4mwnz:after,a.author.id-t2_8kzeb:after,div.content a.author.id-t2_5agom:after,a.author.id-t2_5o2lh:after,a.author.id-t2_4uott:after,a.author.id-t2_dq6ce:after,a.author.id-t2_5qkuh:after,a.author.id-t2_wptze:after{font-size:10px!important;display:block;letter-spacing:normal}
+a.author.id-t2_4mwnz,a.author.id-t2_8kzeb,div.content a.author.id-t2_5agom,a.author.id-t2_5o2lh,a.author.id-t2_4uott,a.author.id-t2_dq6ce,a.author.id-t2_5qkuh,a.author.id-t2_wptze,a.author.id-t2_y83l6,a.author.id-t2_mrnbd{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
+a.author.id-t2_4mwnz:after,a.author.id-t2_8kzeb:after,div.content a.author.id-t2_5agom:after,a.author.id-t2_5o2lh:after,a.author.id-t2_4uott:after,a.author.id-t2_dq6ce:after,a.author.id-t2_5qkuh:after,a.author.id-t2_wptze:after,a.author.id-t2_y83l6:after,a.author.id-t2_mrnbd:after{font-size:10px!important;display:block;letter-spacing:normal}
 div.content a.author.id-t2_5agom:after{content:"Chinchy"}
 a.author.id-t2_5o2lh:after{content:"Luna_in_Equestria"}
 a.author.id-t2_3klgq:after{content:" is an artist";}
 a.author.id-t2_dq6ce:after{content:"GOOUTSIDERAINBOWDAS"}
 a.author.id-t2_5qkuh:after{content:"I_SNUGGLE_PONIES"}
 a.author.id-t2_wptze:after{content:"FlashyOak"}
+a.author.id-t2_y83l6:after{content:"SucksCreamAfterOreos"}
+a.author.id-t2_mrnbd:after{content:"IWantToHugDashie"}
+
 a[href|="/sp"]
 {
  display:inline-block;
@@ -1331,7 +1334,7 @@ div.content .linkflair-unverified .linkflairlabel:hover::after
 }
 
 /*Spoiler-tag notification*/
-/*
+
 .post-submitter.post-under-10m-old .link:not(.over18) .marknsfw-button:before, .post-submitter.post-under-10m-old .link:not(.over18) .marknsfw-button:hover:before {
     position: absolute;
     content: "Is this about the most recent episode?  If so, please spoiler-tag it!";
@@ -1364,7 +1367,7 @@ div.content .linkflair-unverified .linkflairlabel:hover::after
 .post-submitter.post-under-10m-old .link:not(.over18) .marknsfw-button:hover:after {
     border-color: transparent transparent #c0392b; 
 } 
-*/
+
 /*End spoiler-tag notification*/
 
 .thing.self .entry{padding-left:14px}
