--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -378,7 +378,7 @@ content: "[](/zecora-spin-s1)"
 }
 
 .bpm-sb-noconvert-txt::after {
-content: "[](txt!)"
+content: "[](/txt!)"
 }
 
 /* Help and options links */
